--- a/CRUD/CRUD/Properties/Resources.resx
+++ b/CRUD/CRUD/Properties/Resources.resx
@@ -118,14 +118,20 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="CameraIcon2Brilante" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\CameraIcon2Brilante.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Botao_consulta" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Botao_consulta.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Botao_consulta_bilhante" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Botao_consulta_bilhante.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Botao_adicionar" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Botao_adicionar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Design sem nome" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Design sem nome.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="botao_consulta_brilhante" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\botao_consulta_brilhante.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="botao_consulta1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\botao_consulta1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="LogoImprimir" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\LogoImprimir.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -136,13 +142,19 @@
   <data name="Logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Botao_adicionar" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Botao_adicionar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Botao_consulta_bilhante" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Botao_consulta_bilhante.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Design sem nome" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Design sem nome.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="botao_criar" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\botao_criar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="botao_adicionar_brilhante" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\botao_adicionar_brilhante.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="CameraIcon2Brilante" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\CameraIcon2Brilante.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="botao_criar_brilhante" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\botao_criar_brilhante.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
